--- a/registration/styles.css
+++ b/registration/styles.css
@@ -99,3 +99,20 @@ hr {
         font-size: 14px;
     }
 }
+
+nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: gray;
+    font-weight: bold;
+}
